--- a/hugo.toml
+++ b/hugo.toml
@@ -3,22 +3,29 @@ languageCode = 'en-us'
 title = 'Linux Server Maintenance'
 theme = 'lugo'
 
+# Theme used
 [module]
   [[module.imports]]
     path = 'github.com/LukeSmithxyz/lugo'
 
 [markup]
-  defaultMarkdownHandler = 'goldmark'
+  defaultMarkdownHandler = 'goldmark' # Set goldmark as markup renderer
 
+  # Required to display html tags used in markdown files (<u>, <br>, etc..)
+  [markup.goldmark.renderer]
+    unsafe = true
 
+sectionPagesMenu = 'main'
+
+# Theme configuration
 [params]
   # "relatedtext" is the text that appears above the tag list at the bottom of pages.
-  relatedtext = "Other posts with the same tags:"
+  relatedtext = "Article tags:"
   favicon = "/favicon.ico"
 
   #list items
-  datesinlist = true
-  authorsinlist = true
+  datesinlist = false
+  authorsinlist = false
 
   #footer items
   nextprev = true
