--- a/hugo.toml
+++ b/hugo.toml
@@ -19,6 +19,7 @@ sectionPagesMenu = 'main'
 
 # Theme configuration
 [params]
+  github = "https://github.com/exposedlan/linux-server-maintenace-guide"
   # "relatedtext" is the text that appears above the tag list at the bottom of pages.
   relatedtext = "Article tags:"
   favicon = "/favicon.ico"
